client/ecommerce/ecommerce_styles.css
/* Google Font Link */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
}

body {
  background-color: #f6f6f6;
}

.sidebar {
  position: fixed;
  left: 8px;
  top: 15px;
  height: 94%;
  width: 78px;
  background: #513e5c;
  padding: 6px 14px;
  z-index: 99;
  transition: all 0.5s ease;
  border-radius: 18px;
}
.sidebar .active-page {
  background-color: #8b7d77;
}

.sidebar.open {
  width: 220px;
}
.sidebar .logo-details {
  height: 60px;
  display: flex;
  align-items: center;
  position: relative;
}
.sidebar .logo-details .icon {
  opacity: 0;
  transition: all 0.5s ease;
  height: 45px;
  margin-top: 8px;
  width: 45px;
}
.sidebar .logo-details .logo_name {
  color: #fff;
  font-size: 20px;
  font-weight: 600;
  opacity: 0;
  transition: all 0.5s ease;
}
.sidebar.open .logo-details .icon,
.sidebar.open .logo-details .logo_name {
  opacity: 1;
}
.sidebar .logo-details #btn {
  position: absolute;
  top: 50%;
  right: 0;
  transform: translateY(-50%);
  font-size: 22px;
  transition: all 0.4s ease;
  font-size: 23px;
  text-align: center;
  cursor: pointer;
  transition: all 0.5s ease;
}
.sidebar.open .logo-details #btn {
  text-align: right;
}
.sidebar i {
  color: #fff;
  height: 60px;
  min-width: 50px;
  font-size: 28px;
  text-align: center;
  line-height: 60px;
}
.sidebar .nav-list {
  margin-top: 20px;
  height: 100%;
}
.sidebar li {
  position: relative;
  margin: 8px 0;
  list-style: none;
}
.sidebar li .tooltip {
  position: absolute;
  top: -20px;
  left: calc(100% + 15px);
  z-index: 3;
  background: #fff;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
  padding: 6px 12px;
  border-radius: 4px;
  font-size: 15px;
  font-weight: 400;
  opacity: 0;
  pointer-events: none;
  transition: 0s;
}
.sidebar li:hover .tooltip {
  opacity: 1;
  pointer-events: auto;
  transition: all 0.4s ease;
  top: 50%;
  transform: translateY(-50%);
}
.sidebar.open li .tooltip {
  display: none;
}
.sidebar input {
  font-size: 15px;
  color: #fff;
  font-weight: 400;
  outline: none;
  height: 50px;
  width: 100%;
  width: 50px;
  border: none;
  border-radius: 12px;
  transition: all 0.5s ease;
  background: #1d1b31;
}
.sidebar.open input {
  padding: 0 20px 0 50px;
  width: 100%;
}
.sidebar .bx-search {
  position: absolute;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
  font-size: 22px;
  background: #1d1b31;
  color: #fff;
}
.sidebar.open .bx-search:hover {
  background: #1d1b31;
  color: #fff;
}
.sidebar .bx-search:hover {
  background: #fff;
  color: #11101d;
}
.sidebar li a {
  display: flex;
  height: 100%;
  width: 100%;
  border-radius: 12px;
  align-items: center;
  text-decoration: none;
  transition: all 0.4s ease;
  background: #11101d;
  margin-top: 15px;
}
.sidebar .active-page {
  background-color: #8b7d77;
}

.sidebar li a:hover {
  background: #f6f6f6;
}
.sidebar li a .links_name {
  color: #f6f6f6;
  font-size: 15px;
  font-weight: 400;
  white-space: nowrap;
  opacity: 0;
  pointer-events: none;
  transition: 0.4s;
}
.sidebar.open li a .links_name {
  opacity: 1;
  pointer-events: auto;
}
.sidebar li a:hover .links_name,
.sidebar li a:hover i {
  transition: all 0.5s ease;
  color: #11101d;
}
.sidebar li i {
  height: 50px;
  line-height: 50px;
  font-size: 20px;
  border-radius: 12px;
}

.home-section {
  position: relative;
  background: #f6f6f6;
  min-height: 100vh;
  top: 0;
  left: 86px;
  width: calc(100% - 86px);
  transition: all 0.5s ease;
  z-index: 2;
}

.home-section .text {
  display: inline-block;
  font-size: 25px;
  font-weight: 500;
  margin-left: 35px;
}

.search-container .input {
  border: 0;
  outline: none;
  color: #8b7d77;
  background-color: #c4c4c4;
}

input::placeholder {
  color: white;
}

.search_wrap {
  margin: auto;
  display: inline-block;
}

.search_wrap .search_box {
  position: relative;
  width: 920px;
  height: 50px;
}

.search_wrap .search_box .input {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 10px 20px;
  border-radius: 3px;
  font-size: 18px;
  color: white;
}

.search_wrap .search_box .btn {
  position: absolute;
  top: 5px;
  margin-right: 8px;
  width: 53px;
  height: 79%;
  background: #fff;
  z-index: 1;
  cursor: pointer;
  border-radius: 10px;
}

.search_wrap .search_box .btn:hover {
  background: #c7aabc;
}

.search_wrap .search_box .btn.btn_common .fas {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #11101d;
  font-size: 20px;
}

.search_wrap.search_wrap_1 .search_box .btn {
  right: 0;
  border-radius: 10px;
}

.search_wrap.search_wrap_1 .search_box .input {
  padding-right: 80px;
  border-radius: 13px;
}

.top-container {
  display: flex;
  flex-direction: row;
  margin-left: 3%;
  margin-top: 10px;
}

.main-container {
  margin-top: 20px;
}
.product-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-gap: 20px;
}

.square {
  height: 155px;
  width: 240px;
  background-color: #fff;
  border-radius: 15px;
  margin-left: 40px;
  box-shadow: 0 0 5px #513e5c;
  display: flex;
  flex-direction: column;
}

.image-container {
  margin-top: 12px;
  margin-left: auto;
  margin-right: auto;
  width: 89%;
  height: 39%;
  background-color: #513e5c;
  border-radius: 12px;
  text-align: center;
  color: white;
  padding: 6px 8px 6px 8px;
}

.amount-container {
  display: flex;
  flex-direction: row;
  margin-top: 8px;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}

button {
  outline: none !important;
  background-color: transparent;
  border: transparent;
}
button:active {
  outline: none !important;
  border: transparent;
  color: #513e5c;
}
button:hover {
  color: #513e5c;
}
.bxs-minus-square {
  color: #c7aabc;
  font-size: 30px;
  margin-right: 7px;
}

.bxs-plus-square {
  color: #c7aabc;
  font-size: 30px;
  margin-left: 7px;
}

.price-container {
  margin-top: 9px;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  display: flex;
  flex-direction: row;
}

.price-tag {
  margin: auto;
  padding-left: 5px;
  font-weight: bold;
}
.price {
  margin: auto;
  background-color: #c7aabc;
  width: 50%;
  font-size: 16px;
  border-radius: 8px;
  height: 28px;
}

.price:active {
  background-color: #513e5c;
  color: white;
  transform: scale(0.95);
}

.price:hover {
  background-color: #513e5c;
  color: white;
}

.count {
  border: solid 2px #513e5c;
  width: 45px;
  border-radius: 5px;
  font-size: 16px;
  text-align: center;
}

#pageNumber {
  display: flex;
  float: right;
  margin-right: 5%;
  margin-top: 20px;
}

#description {
  text-transform: capitalize;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.bx {
  margin: 8px 5px 5px 5px;
}

